fix(api): fix api implementation and financial logic
Summary:
  - generate new swagger documentation
  - compliance feature by fix run pre-trader check by adding the pipeline
    and add te minimum trade rule
  - fix "iam" permission query fetcher
  - fix "investment" feature on post trasaction and add NAV and research report
  - fix permission logic by adding error and model each position that can access to each feature
  - fix workflow by ading LockTradeDayForPost for lock after approve day lock state
